--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 <a href="#combined-section" class="nav-link">Statistics</a>
                 <a href="#" class="nav-link">Things We Do</a>
                 <a href="#how-this-works" class="nav-link">How This Works</a>
-                <a href="#" class="nav-link">Let's Get Your Songs!</a>
+                <a href="#" class="nav-link">Let's Explore!</a>
             </nav>
             <div class="hamburger-menu"><i class="fas fa-bars"></i></div>
         </div>
@@ -34,7 +34,7 @@
             <div class="showcase-content">
                 <h1>Jammin' with Spotify</h1>
                 <p>I got jammed in Spotify and now I'm totally dazzled</p>
-                <a href="#tab-1" class="btn btn-xl">Let's Get Your Songs!<i class="fas fa-chevron-right btn-icon"></i></a>
+                <a href="#tab-1" class="btn btn-xl">Let's Explore!<i class="fas fa-chevron-right btn-icon"></i></a>
             </div>
         </header>
 
@@ -119,6 +119,34 @@
 
     </main>
 
+        <!-- Footer Section -->
+        <footer>
+            <ul class="icons">
+                <li>
+                    <a href="#"><i class="fa-solid fa-asterisk"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.kaggle.com/datasets/joebeachcapital/30000-spotify-songs"><i class="fa-brands fa-sourcetree"></i></a>
+                </li>
+                <li>
+                    <a href="https://github.com/JoeBrueneman/Jammin_With_Spotify.git"><i class="fa-brands fa-github"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.canva.com/design/DAF9FRN6_EE/bQgnX8pxwmSYIcdLojBSRg/edit?utm_content=DAF9FRN6_EE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><i class="fa-regular fa-file-powerpoint"></i></a>
+                </li>
+            </ul>
+            <ul class="menu">
+                <li>
+                    <a href="#">References</a>
+                    <a href="https://www.kaggle.com/datasets/joebeachcapital/30000-spotify-songs">Data Source</a>
+                    <a href="https://github.com/JoeBrueneman/Jammin_With_Spotify.git">GitHub</a>
+                    <a href="https://www.canva.com/design/DAF9FRN6_EE/bQgnX8pxwmSYIcdLojBSRg/edit?utm_content=DAF9FRN6_EE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Presentation PPT</a>
+                </li>
+            </ul>
+            <p>Created by Group1 @UC Berkeley Extension_Fall 2023</p>
+        </footer>
+        <!-- Footer Section ends -->
+
     <!-- Floating Recommendation Button -->
     <button id="teamrecommendationBtn" class="floating-btn"><i class="fa-solid fa-people-group"></i></button>
 
@@ -156,7 +184,7 @@
                         <tr>
                             <th>Title</th>
                             <th>Genre</th>
-                            <th>Category</th>
+                            <th>Artist</th>
                             <th>Rating</th>
                         </tr>
                     </thead>
@@ -193,13 +221,14 @@
                         </tr>
                     </tbody>
                 </table>
+  
                 <table id="table-gia" class="table-list">
                     <caption class="table-title">Gia's List</caption>
                     <thead>
                         <tr>
                             <th>Title</th>
                             <th>Genre</th>
-                            <th>Category</th>
+                            <th>Artist</th>
                             <th>Rating</th>
                         </tr>
                     </thead>
@@ -242,7 +271,7 @@
                         <tr>
                             <th>Title</th>
                             <th>Genre</th>
-                            <th>Category</th>
+                            <th>Artist</th>
                             <th>Rating</th>
                         </tr>
                     </thead>
@@ -285,15 +314,15 @@
                         <tr>
                             <th>Title</th>
                             <th>Genre</th>
-                            <th>Category</th>
+                            <th>Artist</th>
                             <th>Rating</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Friends</td>
+                            <td>When You're Gone</td>
                             <td>Comedy, Romance</td>
-                            <td>Series</td>
+                            <td>Avril Lavinge</td>
                             <td>8.9</td>
                         </tr>
                         <tr>
@@ -328,7 +357,7 @@
                         <tr>
                             <th>Title</th>
                             <th>Genre</th>
-                            <th>Category</th>
+                            <th>Artist</th>
                             <th>Rating</th>
                         </tr>
                     </thead>
@@ -367,34 +396,6 @@
                 </table>
         </div>
     </div>
-
-    <!-- Footer Section -->
-    <footer>
-        <ul class="icons">
-            <li>
-                <a href="#"><i class="fa-solid fa-asterisk"></i></a>
-            </li>
-            <li>
-                <a href="https://www.kaggle.com/datasets/joebeachcapital/30000-spotify-songs"><i class="fa-brands fa-sourcetree"></i></a>
-            </li>
-            <li>
-                <a href="https://github.com/JoeBrueneman/Jammin_With_Spotify.git"><i class="fa-brands fa-github"></i></a>
-            </li>
-            <li>
-                <a href="https://www.canva.com/design/DAF9FRN6_EE/bQgnX8pxwmSYIcdLojBSRg/edit?utm_content=DAF9FRN6_EE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><i class="fa-regular fa-file-powerpoint"></i></a>
-            </li>
-        </ul>
-        <ul class="menu">
-            <li>
-                <a href="#">References</a>
-                <a href="https://www.kaggle.com/datasets/joebeachcapital/30000-spotify-songs">Data Source</a>
-                <a href="https://github.com/JoeBrueneman/Jammin_With_Spotify.git">GitHub</a>
-                <a href="https://www.canva.com/design/DAF9FRN6_EE/bQgnX8pxwmSYIcdLojBSRg/edit?utm_content=DAF9FRN6_EE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Presentation PPT</a>
-            </li>
-        </ul>
-        <p>Created by Group1 @UC Berkeley Extension_Fall 2023</p>
-    </footer>
-    <!-- Footer Section ends -->
 
     <script src="/static/js/main.js"></script>
 </body>
