--- a/static/css/style.css
+++ b/static/css/style.css
@@ -324,139 +324,6 @@ body, html {
     background-color: #17c950; /* Slightly different shade of green for hover effect */
 }
 
-/* Floating Button Style */
-.floating-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: #1DB954;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 50%;
-}
-
-.floating-btn:hover {
-    background-color: #17a64a; /* Darker shade for hover */
-}
-
-/* Recommendation Popup Styles */
-.recommendation-popup {
-    display: none;
-    position: fixed;
-    z-index: 100;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-.popup-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px 30px;
-    border: 1px solid #888;
-    width: 80%; 
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center align the content */
-    text-align: center;
-    font-size: 40px;
-}
-
-.close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-btn:hover,
-.close-btn:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* Team Member's Github Icons and Recommendations Buttons */
-.member-list {
-    display: flex;
-    justify-content: center; 
-    flex-wrap: wrap;
-    gap: 90px; 
-    margin-bottom: 20px; 
-}
-
-.member {
-    display: flex;
-    flex-direction: column; /* Stack the icon and button vertically */
-    align-items: center; /* Center items vertically within each member */
-    gap: 20px;
-}
-
-.member i.fa-brands {
-    font-size: 100px;
-    padding-top: 30px;
-}
-
-.btn-list {
-    background-color: #4CAF50; 
-    color: white; 
-    border: none; 
-    cursor: pointer; 
-    padding: 12px 24px; 
-    border-radius: 5px; 
-    transition: background-color 0.3s;
-    font-size: 20px;
-}
-
-.btn-list:hover {
-    background-color: #45a049; 
-}
-
-.fa-brands {
-    font-size: 30px; 
-    color: #333; 
-}
-
-/* Table */
-.table, .table-list, .table-top{
-    width: 100%;
-    margin-top: 1.5rem;
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-.table thead th, .table-list thead th {
-    text-transform: uppercase;
-    padding: 0.8rem;
-}
-
-.table tbody tr td, .table-list tbody tr td, .table-top tbody tr td {
-    background-color: #1ED760;
-    padding: 0.8rem 1.2rem;
-    text-align: center;
-    color: #fff;
-}
-
-/* title column alignment to left */
-.table tbody tr td:nth-child(2) {
-    text-align: left;
-}
-
-.table-title {
-    font-size:2rem;
-    font-weight: bold;
-    margin-top: 6rem;
-    margin-bottom: 2rem;
-    text-align: left;
-}
-
 /* Footer */
 footer {
     position: relative;
@@ -517,6 +384,141 @@ footer p {
     margin-bottom: 10px;
     font-size: 1em;
     opacity: 0.75;
+}
+
+/* Floating Button Style */
+.floating-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #1DB954;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+}
+
+.floating-btn:hover {
+    background-color: #17a64a; /* Darker shade for hover */
+}
+
+/* Recommendation Popup Styles */
+.recommendation-popup {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.popup-content {
+    background-image: url('../img/TeamRecommendation-bground.png'); 
+    background-size: cover;
+    background-position: center center;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px 30px;
+    padding-top: 250px;
+    border: 1px solid #888;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center align the content */
+    text-align: center;
+    font-size: 24px; /* Adjusted font size for readability */
+}
+
+.popup-content .text-center {
+    margin-bottom: 20px;
+    font-size: 40px;
+}
+
+.close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+}
+
+/* Team Member's Github Icons and Recommendations Buttons */
+.member-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px; 
+    margin-bottom: 20px;
+}
+
+.member {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px; /* Reduced gap for closer alignment */
+}
+
+/* Style for the member's Recommendations */
+
+.team-recommendations {
+    color: #fff;
+}
+
+/* Style for the GitHub icons */
+.member i.fa-brands {
+    font-size: 80px; 
+    color: #4CAF50; 
+    padding-top: 10px; 
+}
+
+/* Style for the buttons */
+.member .btn-list {
+    font-size: 20px; 
+    color: white;
+    background-color: #333; 
+    padding: 12px 24px; 
+    border-radius: 5px; 
+    border: none;
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+}
+
+.btn-list:hover {
+    background-color: #45a049;
+}
+  
+.table-list, .table-list th, .table-list td {
+    border-collapse: collapse;
+    border-width: 50px;
+}
+
+.table-list {
+    display: none; 
+    width: 100%; 
+    margin-top: 1.5rem; 
+    border-collapse: collapse; 
+}
+
+.table-list th, .table-list td {
+    padding: 8px; 
+    text-align: left; 
+}
+
+.table-list thead th {
+    color: #1DB954; 
+    font-size: 25px;
 }
 
 /* Media Queries */
