--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
             <a href="#" class="nav-brand"><img src="/static/img/logo_transparent-background.png" alt="Logo" class="logo"></a>
             <nav class="nav-menu">
                 <a href="#showcase" class="nav-link">Home</a>
-                <a href="#combined-section" class="nav-link">Statistics</a>
-                <a href="#" class="nav-link">Things We Do</a>
+                <a href="#combined-section" class="nav-link">Things We Do</a>
+                <a href="#" class="nav-link">Statistics</a>
                 <a href="#how-this-works" class="nav-link">How This Works</a>
                 <a href="#" class="nav-link">Let's Explore!</a>
             </nav>
@@ -40,7 +40,7 @@
 
     <!-- landing page section ends-->
 
-    <!-- Statistics section starts-->
+    <!-- Things We Do section starts-->
         <section class="combined-section">
             <div class="text-section">
                 <div class="statistics-section">
@@ -58,7 +58,9 @@
                 <img src="/static/img/spotify sound wave.webp" alt="Sound Wave">
             </div>
         </section>
-    <!-- Statistics section ends-->
+    <!-- Things We Do section ends-->
+
+    <!-- Statistics (Charts) Section to be added here-->
 
     <!-- Section Container Starts -->
     <div class="section-container">
@@ -161,239 +163,169 @@
                 <!-- Team Member's Github Icons-->
                 <div class="member-list">
                     <div class="member">
-                        <i class="fa-brands fa-github-alt icon-christophe"></i><button id="christophe" class="btn-list teammate-icon" data-member="christophe"><span>CHRISTOPHE</span></button>
-                    </div>
-                    <div class="member">
                         <i class="fa-brands fa-github-alt icon-gia"></i><button id="gia" class="btn-list teammate-icon" data-member="gia"><span>GIA</span></button>
                     </div>
                     <div class="member">
-                        <i class="fa-brands fa-github-alt icon-joe"></i><button id="joe" class="btn-list teammate-icon" data-member="joe"><span>JOE</span></button>
+                        <i class="fa-brands fa-github-alt icon-julia"></i><button id="julia" class="btn-list teammate-icon" data-member="julia"><span>JULIA</span></button>
                     </div>
                     <div class="member">
-                        <i class="fa-brands fa-github-alt icon-julia"></i><button id="julia" class="btn-list teammate-icon" data-member="julia"><span>JULIA</span></button>
+                        <i class="fa-brands fa-github-alt icon-christophe"></i><button id="christophe" class="btn-list teammate-icon" data-member="christophe"><span>CHRISTOPHE</span></button>
+                    </div>
+                    <div class="member">
+                        <i class="fa-brands fa-github-alt icon-joe"></i><button id="joe" class="btn-list teammate-icon" data-member="joe"><span>JOE</span></button>
                     </div>
                     <div class="member">
                         <i class="fa-brands fa-github-alt icon-minh"></i><button id="minh" class="btn-list teammate-icon" data-member="minh"><span>MINH</span></button>
                     </div>
                 </div>
        
-                <!-- Team Member's Recommendations Tables -->
-                <table id="table-christophe" class="table-list show-table">
-                    <caption class="table-title">Christophe's List</caption>
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Genre</th>
-                            <th>Artist</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Lost</td>
-                            <td>Adventure, Drama, Fantasy</td>
-                            <td>Series</td>
-                            <td>8.3</td>
-                        </tr>
-                        <tr>
-                            <td>Space Force</td>
-                            <td>Comedy</td>
-                            <td>Series</td>
-                            <td>6.7</td>
-                        </tr>
-                        <tr>
-                            <td>Star Trek: Voyager</td>
-                            <td>Action, Adventure, Sci-Fi</td>
-                            <td>Series</td>
-                            <td>7.9</td>
-                        </tr>
-                        <tr>
-                            <td>The Hunger Games</td>
-                            <td>Action, Adventure, Sci-Fi</td>
-                            <td>Movie</td>
-                            <td>7.2</td>
-                        </tr>
-                        <tr>
-                            <td>Taken</td>
-                            <td>Action, Crime, Thriller</td>
-                            <td>Movie</td>
-                            <td>7.8</td>
-                        </tr>
-                    </tbody>
-                </table>
-  
-                <table id="table-gia" class="table-list">
-                    <caption class="table-title">Gia's List</caption>
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Genre</th>
-                            <th>Artist</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Dark</td>
-                            <td>Science Fiction</td>
-                            <td>Series</td>
-                            <td>9.0</td>
-                        </tr>
-                        <tr>
-                            <td>The Queen's Gambit</td>
-                            <td>Drama</td>
-                            <td>Series</td>
-                            <td>9.5</td>
-                        </tr>
-                        <tr>
-                            <td>Wednesday</td>
-                            <td>Science Fiction</td>
-                            <td>Series</td>
-                            <td>8.5</td>
-                        </tr>
-                        <tr>
-                            <td>Stranger Things</td>
-                            <td>Science Fiction</td>
-                            <td>Series</td>
-                            <td>8.7</td>
-                        </tr>
-                        <tr>
-                            <td>Breaking Bad</td>
-                            <td>Crime</td>
-                            <td>Series</td>
-                            <td>8.0</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table id="table-joe" class="table-list">
-                    <caption class="table-title">Joe's List</caption>
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Genre</th>
-                            <th>Artist</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Ginny & Georgia</td>
-                            <td>Comedy, Drama</td>
-                            <td>Series</td>
-                            <td>7.5</td>
-                        </tr>
-                        <tr>
-                            <td>Suits</td>
-                            <td>Drama, Comedy</td>
-                            <td>Series</td>
-                            <td>8.4</td>
-                        </tr>
-                        <tr>
-                            <td>The Blacklist</td>
-                            <td>Crime, Drama, Mystery</td>
-                            <td>Series</td>
-                            <td>7.9</td>
-                        </tr>
-                        <tr>
-                            <td>Brooklyn Nine-Nine</td>
-                            <td>Comedy, Crime</td>
-                            <td>Series</td>
-                            <td>8.4</td>
-                        </tr>
-                        <tr>
-                            <td>Hunter x Hunter</td>
-                            <td>Action, Adventure, Animation</td>
-                            <td>Series</td>
-                            <td>9.0</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table id="table-julia" class="table-list">
-                    <caption class="table-title">Julia's List</caption>
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Genre</th>
-                            <th>Artist</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>When You're Gone</td>
-                            <td>Comedy, Romance</td>
-                            <td>Avril Lavinge</td>
-                            <td>8.9</td>
-                        </tr>
-                        <tr>
-                            <td>The Queen's Gambit</td>
-                            <td>Drama</td>
-                            <td>Series</td>
-                            <td>9.5</td>
-                        </tr>
-                        <tr>
-                            <td>Stranger Things</td>
-                            <td>Science Fiction</td>
-                            <td>Series</td>
-                            <td>8.5</td>
-                        </tr>
-                        <tr>
-                            <td>Jefferey Dahmer</td>
-                            <td>Science Fiction</td>
-                            <td>Series</td>
-                            <td>8.7</td>
-                        </tr>
-                        <tr>
-                            <td>That 70's Show</td>
-                            <td>Comedy</td>
-                            <td>Series</td>
-                            <td>8.0</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table id="table-minh" class="table-list">
-                    <caption class="table-title">Minh's List</caption>
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Genre</th>
-                            <th>Artist</th>
-                            <th>Rating</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>The Breaking Bad</td>
-                            <td>Crime, Drama, Thriller</td>
-                            <td>Series</td>
-                            <td>9.5</td>
-                        </tr>
-                        <tr>
-                            <td>The Good Place</td>
-                            <td>Comedy, Drama, Fantasy</td>
-                            <td>Series</td>
-                            <td>8.2</td>
-                        </tr>
-                        <tr>
-                            <td>Manifest</td>
-                            <td>Drama, Mystery, Sci-Fi</td>
-                            <td>Series</td>
-                            <td>7.1</td>
-                        </tr>
-                        <tr>
-                            <td>Ozark</td>
-                            <td>Crime, Drama, Thriller</td>
-                            <td>Series</td>
-                            <td>8.5</td>
-                        </tr>
-                        <tr>
-                            <td>The Umbrella Academy</td>
-                            <td>Action, Adventure, Comedy</td>
-                            <td>Series</td>
-                            <td>7.9</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <!-- Team Member's Recommendations -->
+                <!--Gia-->
+                <div id="recommendations-gia" class="wrapped-content hidden">
+                    <div class="gia-image-placeholder"></div>
+                    <div class="wrapped-stats">
+                        <div class="wrapped-left-column">
+                            <h3>Top Artists</h3>
+                            <ul>
+                                <li>#1 Taylor Swift</li>
+                                <li>#2 Beyonce</li>
+                                <li>#3 Black Pink</li>
+                                <li>#4 Lauv</li>
+                                <li>#5 NIKI</li>
+                            </ul>
+                        </div>
+                        <div class="wrapped-right-column">
+                            <h3>Top Songs</h3>
+                            <ul>
+                                <li>#1 Out Of The Woods</li>
+                                <li>#2 Pretty Hurts</li>
+                                <li>#3 How You Like That</li>
+                                <li>#4 Love You Like That</li>
+                                <li>#5 La La Lost You</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="wrapped-footer">
+                        <span>Top Genre - Pop & Contemporary R&B</span>
+                    </div>
+                </div>
+                <!--Julia-->
+                <div id="recommendations-julia" class="wrapped-content hidden">
+                    <div class="julia-image-placeholder"></div>
+                    <div class="wrapped-stats">
+                        <div class="wrapped-left-column">
+                            <h3>Top Artists</h3>
+                            <ul>
+                                <li>#1 Avril Lavinge</li>
+                                <li>#2 Beyonce</li>
+                                <li>#3 SZA</li>
+                                <li>#4 Billie Ellish</li>
+                                <li>#5 Conor Price</li>
+                            </ul>
+                        </div>
+                        <div class="wrapped-right-column">
+                            <h3>Top Songs</h3>
+                            <ul>
+                                <li>#1 When You're Gone</li>
+                                <li>#2 Irreplaceable</li>
+                                <li>#3 Snooze</li>
+                                <li>#4 Ocean Eyes</li>
+                                <li>#5 You Said</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="wrapped-footer">
+                        <span>Top Genre - Alternative Rock</span>
+                    </div>
+                </div>
+                <!--Christophe-->
+                <div id="recommendations-christophe" class="wrapped-content hidden">
+                    <div class="christophe-image-placeholder"></div>
+                    <div class="wrapped-stats">
+                        <div class="wrapped-left-column">
+                            <h3>Top Artists</h3>
+                            <ul>
+                                <li>#1 Avril Lavinge</li>
+                                <li>#2 Beyonce</li>
+                                <li>#3 SZA</li>
+                                <li>#4 Billie Ellish</li>
+                                <li>#5 Conor Price</li>
+                            </ul>
+                        </div>
+                        <div class="wrapped-right-column">
+                            <h3>Top Songs</h3>
+                            <ul>
+                                <li>#1 When You're Gone</li>
+                                <li>#2 Irreplaceable</li>
+                                <li>#3 Snooze</li>
+                                <li>#4 Ocean Eyes</li>
+                                <li>#5 You Said</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="wrapped-footer">
+                        <span>Top Genre - Alternative Rock</span>
+                    </div>
+                </div>
+                <!--Joe-->
+                <div id="recommendations-joe" class="wrapped-content hidden">
+                    <div class="joe-image-placeholder"></div>
+                    <div class="wrapped-stats">
+                        <div class="wrapped-left-column">
+                            <h3>Top Artists</h3>
+                            <ul>
+                                <li>#1 Avril Lavinge</li>
+                                <li>#2 Beyonce</li>
+                                <li>#3 SZA</li>
+                                <li>#4 Billie Ellish</li>
+                                <li>#5 Conor Price</li>
+                            </ul>
+                        </div>
+                        <div class="wrapped-right-column">
+                            <h3>Top Songs</h3>
+                            <ul>
+                                <li>#1 When You're Gone</li>
+                                <li>#2 Irreplaceable</li>
+                                <li>#3 Snooze</li>
+                                <li>#4 Ocean Eyes</li>
+                                <li>#5 You Said</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="wrapped-footer">
+                        <span>Top Genre - Alternative Rock</span>
+                    </div>
+                </div>
+                <!--Minh-->
+                <div id="recommendations-minh" class="wrapped-content hidden">
+                    <div class="minh-image-placeholder"></div>
+                    <div class="wrapped-stats">
+                        <div class="wrapped-left-column">
+                            <h3>Top Artists</h3>
+                            <ul>
+                                <li>#1 Avril Lavinge</li>
+                                <li>#2 Beyonce</li>
+                                <li>#3 SZA</li>
+                                <li>#4 Billie Ellish</li>
+                                <li>#5 Conor Price</li>
+                            </ul>
+                        </div>
+                        <div class="wrapped-right-column">
+                            <h3>Top Songs</h3>
+                            <ul>
+                                <li>#1 When You're Gone</li>
+                                <li>#2 Irreplaceable</li>
+                                <li>#3 Snooze</li>
+                                <li>#4 Ocean Eyes</li>
+                                <li>#5 You Said</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="wrapped-footer">
+                        <span>Top Genre - Alternative Rock</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
